background image & page links added

--- a/home.html
+++ b/home.html
@@ -18,18 +18,18 @@
 
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand text-warning" href="#">Sunny Grill</a>
+        <a class="navbar-brand text-warning" href="home.html">Sunny Grill</a>
         <ul class="nav justify-content-end mr-3">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="home.html">Home</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Reservations
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Make a Reservation</a>
-                  <a class="dropdown-item" href="#">View Waitlist</a>
+                  <a class="dropdown-item" href="reso.html">Make a Reservation</a>
+                  <a class="dropdown-item" href="tables.html">View Waitlist</a>
                 </div>
               </li>
           </ul>
