--- a/public/reso.html
+++ b/public/reso.html
@@ -6,21 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Reservations</title>
   <!-- CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/reso.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/reso.css">
   <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <!-- Popper.js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
   <!-- Bootstrap JS -->
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -74,3 +65,39 @@
 </body>
 
 </html>
+
+<script type="text/javascript">
+
+  // Front-end JacaSCript that POSTs our form data to our express server
+  $(".submit").on("click", () => {
+    event.preventDefault();
+
+    // Grabs the form elements and puts them in object
+    let newReservation = {
+      name: $("#reserve-name").val().trim(),
+      size: $("#reserve-size").val().trim(),
+      phone: $("#reserve-phone").val().trim(),
+    };
+
+    console.log(newReservation);
+
+    $.post("/api/tables", newReservation, data => {
+      if (data) {
+        alert("Your table is ready, please visit the host stand to be seated");
+      }
+
+      else {
+        alert("You are on the waitlist, we will text when your table is ready");
+      }
+
+
+      // Clear form after submitting
+      $("#reserve-name").val("");
+      $("#reserve-size").val("");
+      $("#reserve-phone").val("");
+
+    });
+
+  });
+
+</script>
