Reservations populating to page

--- a/public/home.html
+++ b/public/home.html
@@ -9,25 +9,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand text-warning" href="home.html">Sunny Grill</a>
+        <a class="navbar-brand text-warning" href="/">Sunny Grill</a>
         <ul class="nav justify-content-end mr-3">
             <li class="nav-item active">
-              <a class="nav-link" href="home.html">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Reservations
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="reso.html">Make a Reservation</a>
-                  <a class="dropdown-item" href="tables.html">View Waitlist</a>
+                  <a class="dropdown-item" href="/reservations">Make a Reservation</a>
+                  <a class="dropdown-item" href="/tables">View Waitlist</a>
                 </div>
               </li>
           </ul>
