--- a/public/reso.html
+++ b/public/reso.html
@@ -9,17 +9,17 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/reso.css">
   <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
   <!-- Bootstrap JS -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
   <nav class="navbar navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand text-warning" href="home.html">Sunny Grill</a>
+    <a class="navbar-brand text-warning" href="/">Sunny Grill</a>
     <ul class="nav justify-content-end mr-3">
       <li class="nav-item active">
-        <a class="nav-link" href="home.html">Home</a>
+        <a class="nav-link" href="/">Home</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -27,8 +27,8 @@
           Reservations
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="reso.html">Make a Reservation</a>
-          <a class="dropdown-item" href="tables.html">View Waitlist</a>
+          <a class="dropdown-item" href="/reservations">Make a Reservation</a>
+          <a class="dropdown-item" href="/tables">View Waitlist</a>
         </div>
       </li>
     </ul>
@@ -55,7 +55,7 @@
               <input type="tel" class="form-control" id="reserve-phone">
             </div>
             <div class="reso-button">
-              <button type="submit" class="btn btn-primary">Find Table</button>
+              <button type="submit" class="btn btn-primary submit">Find Table</button>
             </div>
           </form>
         </div>
@@ -69,18 +69,20 @@
 <script type="text/javascript">
 
   // Front-end JacaSCript that POSTs our form data to our express server
-  $(".submit").on("click", () => {
+  $(".submit").on("click", (event) => {
     event.preventDefault();
 
     // Grabs the form elements and puts them in object
     let newReservation = {
       name: $("#reserve-name").val().trim(),
       size: $("#reserve-size").val().trim(),
-      phone: $("#reserve-phone").val().trim(),
+      phone: $("#reserve-phone").val().trim()
     };
 
     console.log(newReservation);
 
+    // Give URL and object we want to send, with callback that returns true or false if a table is available
+    // Similar to AJAX call 
     $.post("/api/tables", newReservation, data => {
       if (data) {
         alert("Your table is ready, please visit the host stand to be seated");
@@ -89,7 +91,6 @@
       else {
         alert("You are on the waitlist, we will text when your table is ready");
       }
-
 
       // Clear form after submitting
       $("#reserve-name").val("");
